# auth-kolosov

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: release-package.yml
auth-kolosov/: Dockerfile  pyproject.toml
auth-kolosov/auth_kolosov/: containers.py  redis.py  services.py
