[tool.poetry]
name = "auth-kolosov"
version = "0.1.0"
description = ""
authors = ["Dmitry Kolosov"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
aioredis = "^2.0.1"
pytest = "^7.1.2"
dependency-injector = "^4.39.1"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
